2017-09-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha05 final changes';git push
	git tag -a 4.6.9-alpha05 -m 'CMake hardening;CDF5 bug diagnosis';git push --tags

	* Refine and test CDF5 diagnostics

	* CDL output ID = xxx in comments when dbg_lvl >= 2

	* Add/use nco_inq_path() to improve CDF5 diagnostics

2017-09-12  Charlie Zender  <zender@uci.edu>

	* Passes all expected regression tests

	* Allow ncks thr_nbr > 1 only when regridder is activated

	* Automatically detect and warn about possibly corrupt CDF5 files in nco_close()

2017-09-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha04 final changes';git push
	git tag -a 4.6.9-alpha04 -m 'CMake hardening;Fix Traditional bld/Makefile';git push --tags

	* Try and fail to get Travis clang build to succeed, need better build matrix...

	* Change custom build to use simple VERSION string

	* Fix Custom build on MacOSX by modifying ARFLAGS

	* Distinguish MD5 output with different debugging levels

	* Add nco_fl_sz_est() and print smr_fl_sz_sng to CDL

	* clang builds on Linux do not build ncap2 because NCO_GSL_VERSION not defined

	* Add ncks --bld, --build_engine to print NCO_BUILDENGINE

	* Define NCO_BUILDENGINE for all three build types

2017-09-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha03 final changes';git push
	git tag -a 4.6.9-alpha03 -m 'CMake implementation;data size estimates with ncks -D 2;--lst_xtr';git push --tags

	* Fix calculation of ram_sz_crr in nco_prn()

2017-09-05  Charlie Zender  <zender@uci.edu>

	* Add CDF5 presence to ncks -r report

	* Refine CMake templates

	* CMake implementation from Pedro

	* round() filesize estimates instead of truncating them

2017-09-04  Charlie Zender  <zender@uci.edu>
