@@ -1930,10 +1930,11 @@ if($USER eq 'zender'){
 # 
     
 #ncks #29 groups: Sort output alphabetically
-# ncks -z ~/nco/data in_grp.nc | tail -1
+# ncks -z ~/nco/data/in_grp.nc | tail -1 (deprecated 20170914)
+# ncks --trd -m ~/nco/data/in_grp.nc | grep ": type" | tail -1 | cut -d ' ' -f 1
     $dsc_sng="(Groups) Sort output alphabetically";
-    $tst_cmd[0]="ncks -z $in_pth_arg in_grp.nc | tail -1";
-    $tst_cmd[1]="var: /val_one_mss";
+    $tst_cmd[0]="ncks --trd -m $in_pth_arg in_grp.nc | grep ': type' | tail -1 | cut -d ' ' -f 1";
+    $tst_cmd[1]="val_one_mss:";
     $tst_cmd[2]="SS_OK";
     NCO_bm::tst_run(\@tst_cmd);
     $#tst_cmd=0; # Reset array
